--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 
 
 
-<meta http-equiv="refresh" content="0; url=https://smrturl.co/o/199031/53343607?s1=" />
+<meta http-equiv="refresh" content="0; url=https://giveawys.github.io/USA/=" />
 
