--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 
 
 
-<meta http-equiv="refresh" content="0; url=https://giveawys.github.io/USA/=" />
+<meta http-equiv="refresh" content="0; url=https://giveawys.github.io/USA/" />
 
 
